# blackjack

./: blackjack.cabal
src/: Main.hs
